Static Load Code added

--- a/CryptoWheelSpin/templates/contact.html
+++ b/CryptoWheelSpin/templates/contact.html
@@ -215,7 +215,7 @@
 												<div class="mr-hover-effect"></div></a>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link active dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 											Pages
 											<div class="mr-hover-effect"></div>
 										</a>
@@ -233,7 +233,7 @@
                                         </ul>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" href="contact.html">Contact
+                                        <a class="nav-link active" href="contact.html">Contact
 													<div class="mr-hover-effect"></div></a>
                                     </li>
                                 </ul>
@@ -249,26 +249,26 @@
     <!-- Header Area End  -->
 
     <!-- Breadcrumb Area Start -->
-    <section class="breadcrumb-area bc-terms">
-        <img class="bc-img" src="assets/images/breadcrumb/tc.png" alt="">
+    <section class="breadcrumb-area bc-contact">
+        <img class="bc-img" src="assets/images/breadcrumb/contact.png" alt="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <h4 class="title">
-                        terms & conditions
+                        Contact
                     </h4>
                     <ul class="breadcrumb-list">
                         <li>
                             <a href="index.html">
-								<i class="fas fa-home"></i>
-								Home
+									<i class="fas fa-home"></i>
+									Home
 							</a>
                         </li>
                         <li>
                             <span><i class="fas fa-chevron-right"></i> </span>
                         </li>
                         <li>
-                            <a href="terms-conditions.html">Terms & Conditions</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                     </ul>
                 </div>
@@ -277,205 +277,45 @@
     </section>
     <!-- Breadcrumb Area End -->
 
-    <!-- Serch Area Start -->
-    <div class="serch-area">
+    <!-- Contact Area End -->
+    <section class="contact">
+        <img class="left-img" src="assets/images/contact-left.png" alt="">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="serch-box">
-                        <div class="row">
-                            <div class="col-lg-12">
-                                <form action="#">
-                                    <ul class="list">
-                                        <li class="input-field">
-                                            <input type="text" placeholder="Serch For Articals">
-                                        </li>
-                                        <li class="button">
-                                            <button type="submit" class="mybtn1">Get Started </button>
-                                        </li>
-                                    </ul>
-                                </form>
-                            </div>
-                        </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-8 col-md-10">
+                    <div class="section-heading">
+                        <h5 class="subtitle">
+                            Contact Us
+                        </h5>
+                        <h2 class="title">
+                            Get in Touch
+                        </h2>
+                        <p class="text">
+                            It’s up to the competition in features, with some unique advantages.All the latest crypto games.Here are some of them.
+                        </p>
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- Serch Area End -->
-    <!-- Help Section Area Start -->
-    <section class="help-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="help-box">
-                        <div class="help-box-inner">
+            <div class="row justify-content-end">
+                <div class="col-lg-6">
+                    <div class="contact-form-wrapper">
+                        <div class="contact-box">
                             <h4 class="title">
-                                Getting Started Guides
+                                Send Us a Message
                             </h4>
-                            <div class="content">
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-												David Kemmerer
-											</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="help-box-inner2-hearer">
-                            <h4 class="title">
-                                Terms and Conditions of Megawins
-                            </h4>
-                        </div>
-                        <div class="help-box-inner2">
-                            <div class="single-artical">
-                                <div class="content">
-                                    <h4 class="title">
-                                        Bonus Terms & Conditions
-                                    </h4>
-                                </div>
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-												David Kemmerer
-											</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-artical">
-                                <div class="content">
-                                    <h4 class="title">
-                                        Bonus Terms & Conditions
-                                    </h4>
-                                </div>
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-												David Kemmerer
-											</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-artical">
-                                <div class="content">
-                                    <h4 class="title">
-                                        Bonus Terms & Conditions
-                                    </h4>
-                                </div>
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-												David Kemmerer
-											</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-artical">
-                                <div class="content">
-                                    <h4 class="title">
-                                        Bonus Terms & Conditions
-                                    </h4>
-                                </div>
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-												David Kemmerer
-											</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="help-box-inner3-hearer">
-                            <h4 class="title">
-                                Privacy
-                            </h4>
-                        </div>
-                        <div class="help-box-inner2">
-                            <div class="single-artical">
-                                <div class="content">
-                                    <h4 class="title">
-                                        Bonus Terms & Conditions
-                                    </h4>
-                                </div>
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-													David Kemmerer
-												</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="single-artical">
-                                <div class="content">
-                                    <h4 class="title">
-                                        Bonus Terms & Conditions
-                                    </h4>
-                                </div>
-                                <div class="writer-profile">
-                                    <div class="img">
-                                        <img src="assets/images/tc.png" alt="">
-                                    </div>
-                                    <div class="writer-content">
-                                        <h5 class="w-name">
-                                            Written by <a href="#">
-													David Kemmerer
-												</a>
-                                        </h5>
-                                        <p>27 articles in this collection
-                                        </p>
-                                    </div>
-                                </div>
-                            </div>
+                            <form action="#">
+                                <input type="text" class="input-field" placeholder="Enter Your Full Name">
+                                <input type="email" class="input-field" placeholder="Enter Your Email Address">
+                                <textarea class="input-field textarea" placeholder="Message *"></textarea>
+                                <button type="submit" class="mybtn1">SUBMIT NOW</button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Help Section Area End -->
+    <!-- Contact Area End -->
 
     <!-- Footer Area Start -->
     <footer class="footer" id="footer">
